testdata/baselines/reference/submodule/compiler/moduleInTypePosition1.errors.txt
moduleInTypePosition1_0.ts(1,14): error TS2529: Duplicate identifier 'Promise'. Compiler reserves name 'Promise' in top level scope of a module containing async functions.
moduleInTypePosition1_1.ts(3,14): error TS2709: Cannot use namespace 'WinJS' as a type.


==== moduleInTypePosition1_1.ts (1 errors) ====
    ///<reference path='moduleInTypePosition1_0.ts'/>
    import WinJS = require('./moduleInTypePosition1_0');
    var x = (w1: WinJS) => { };
                 ~~~~~
!!! error TS2709: Cannot use namespace 'WinJS' as a type.
    
==== moduleInTypePosition1_0.ts (1 errors) ====
    export class Promise {
                 ~~~~~~~
!!! error TS2529: Duplicate identifier 'Promise'. Compiler reserves name 'Promise' in top level scope of a module containing async functions.
        foo: string;
    }
    